--- a/my_server/my_server.vcxproj.filters
+++ b/my_server/my_server.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="PersonData.h">
-      <Filter>源文件</Filter>
-    </ClInclude>
     <ClInclude Include="Client.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -40,6 +37,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\message_types.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="PersonData.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
