person has a new field -- paper_id which is unique and refactor detect result package and client modify package to adjust the paper_id field,fix a bug:when the client send a new image,client class member -- personId_map should be clear

--- a/Control/Control.vcxproj.filters
+++ b/Control/Control.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Control.cpp">
+    <ClCompile Include="Controler.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
