--- a/Control/Control.vcxproj
+++ b/Control/Control.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{3FD2AD3A-57CB-493D-8216-4BB07EC649E7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Control</RootNamespace>
+    <ProjectName>Controler</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -83,7 +84,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Control.cpp" />
+    <ClCompile Include="Controler.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
